--- a/sites/all/modules/contrib/admin_menu/CHANGELOG.txt
+++ b/sites/all/modules/contrib/admin_menu/CHANGELOG.txt
@@ -1,10 +1,18 @@
-// $Id: CHANGELOG.txt,v 1.33.2.57 2009/06/21 18:58:04 sun Exp $
+// $Id: CHANGELOG.txt,v 1.33.2.62 2010/02/20 23:53:18 sun Exp $
 
 Admin Menu x.x-x.x, xxxx-xx-xx
 ------------------------------
 
 
 Admin Menu 6.x-1.x, xxxx-xx-xx
+------------------------------
+#645526 by TravisCarden, hutch: Fixed stale local tasks markup after moving them.
+#615058 by Dave Reid: Fixed compatibility with PHP 5.3.
+#540762 by Deslack: Added Malay translation.
+#362454 by sun: Fixed Drupal.settings.admin_menu is undefined error.
+
+
+Admin Menu 6.x-1.5, 2009-07-02
 ------------------------------
 #479922 by sun: Fixed fieldsets not collapsed on admin/build/modules/list*.
 #236657 by sun: Updated for corrected arguments of system_clear_cache_submit().
