--- a/sites/all/modules/contrib/admin_menu/translations/ms.po
+++ b/sites/all/modules/contrib/admin_menu/translations/ms.po
@@ -1,142 +1,141 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: admin_menu v1.x\n"
-"POT-Creation-Date: 2009-01-21 22:26+0100\n"
-"PO-Revision-Date: 2009-06-06 19:27+0100\n"
-"Last-Translator: Alexander Haß\n"
-"Language-Team: unleashed mind <dev@unleashedmind.com>\n"
+"Project-Id-Version: admin_menu (6.x-1.4)\n"
+"POT-Creation-Date: 2009-01-21 22:28+0100\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Omar Khayam Abdullah <drupal.my@deslack.com>\n"
+"Language-Team: Malay <drupal-my@deslack.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: German\n"
-"X-Poedit-Country: GERMANY\n"
+"Plural-Forms: nplurals=2; plural=(n!=1)\n"
+"X-Poedit-Language: Malay\n"
+"X-Poedit-Country: MALAYSIA\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #: admin_menu.inc:261
 msgid "Enable developer modules"
-msgstr "Entwicklermodule aktivieren"
+msgstr "Bolehkan modul-modul pemaju"
 
 #: admin_menu.inc:261
 msgid "Disable developer modules"
-msgstr "Entwicklermodule deaktivieren"
+msgstr "Nyahbolehkan modul-modul pemaju"
 
 #: admin_menu.inc:346
 msgid "Adjust top margin"
-msgstr "Oberen Seitenrand anpassen"
+msgstr "Laraskan jidar atas"
 
 #: admin_menu.inc:348
 msgid "If enabled, the site output is shifted down approximately 20 pixels from the top of the viewport to display the administration menu. If disabled, some absolute- or fixed-positioned page elements may be covered by the administration menu."
-msgstr "Falls aktiviert, wird die Seitenausgabe um etwa 20 Pixel nach unten verschoben, um das Administrationsmenü anzuzeigen. Falls deaktiviert, können einige absolut oder fix positionierte Seitenelemente vom Administrationsmenü überdeckt werden."
+msgstr "Jika dibolehkan, output laman akan dianjakkan kebawah lebih kurang 20 piksel daripada port pandang untuk mempamerkan menu pentadbiran. Jika dinyahbolehkan, segelintir elemen laman yang berposisi mutlak atau tetap mungkin dilindungi oleh menu pentadbiran."
 
-# sun: Original ist falsch.
 #: admin_menu.inc:352
 msgid "Keep menu at top of page"
-msgstr "Menü am Seitenanfang halten"
+msgstr "Simpan menu di bahagian atas laman"
 
 #: admin_menu.inc:354
 msgid "If enabled, the administration menu is always displayed at the top of the browser viewport (even after the page is scrolled). <strong>Note: In some browsers, this setting results in a malformed page, an invisible cursor, non-selectable elements in forms, or other issues. Disable this option if these issues occur.</strong>"
-msgstr "Falls aktiviert, wird das Administrationsmenü immer am oberen Rand des Browserfensters angezeigt (auch nach dem Betätigen des Bildlaufs). <strong>Hinweis: In manchen Browsern resultiert diese Option in einer falsch angezeigten Seite, einem unsichtbaren Cursor, nicht selektierbare Elemente in Formularen oder anderen Problemen. Die Option sollte deaktiviert werden, falls diese Probleme auftreten.</strong>"
+msgstr "Jika dibolehkan, menu pentadbiran akan sentiasa dipamerkan di atas port pandang pelayar (walaupun setelah laman itu ditatal). <strong>Nota: Dalam sesetengah pelayar, seting ini akan mengakibatkan laman yang cacat bentuknya, kursor ghaib, elemen yang tidak boleh dipilih dalam borang, atau isu-isu lain. Nyahbolehkan opsyen ini jika isu-isu tersebut berlaku.</strong>"
 
 #: admin_menu.inc:358
 msgid "Advanced settings"
-msgstr "Erweiterte Einstellungen"
+msgstr "Seting terperinci"
 
 #: admin_menu.inc:362
 msgid "Collapse fieldsets on modules page"
-msgstr "Feldgruppen auf der Modul-Seite zuklappen"
+msgstr "Lipat set medan di laman modul"
 
 #: admin_menu.inc:364
 msgid "If enabled, fieldsets on the <a href=\"!modules-url\">modules</a> page are automatically collapsed when loading the page."
-msgstr "Falls aktiviert, werden Feldgruppen auf der <a href=\"!modules-url\">Modul</a>-Seite beim Laden automatisch zugeklappt."
+msgstr "Jika dibolehkan, set medan pada laman <a href=\"!modules-url\">modul</a> akan dilipat secara automatik apabila laman dimuatkan."
 
 #: admin_menu.inc:367
 msgid "If the Utility module was installed for this purpose, it can be safely disabled and uninstalled."
-msgstr "Sollte das „Utility“-Modul für diesen Zweck installiert worden sein, kann dieses deaktiviert und deinstalliert werden."
+msgstr "Jika modul \"Utility\" dipasang untuk tujuan ini, ianya boleh dinyahbolehkan dan dinyahpasang dengan selamat."
 
 #: admin_menu.inc:371
 msgid "Move local tasks into menu"
-msgstr "Tabs in das Menü verschieben"
+msgstr "Pindahkan tugas setempat kepada menu"
 
 #: admin_menu.inc:373
 msgid "If enabled, the tabs on the current page are moved into the administration menu. This feature is only available in themes that use the CSS classes <code>tabs primary</code> and <code>tabs secondary</code> for tabs."
-msgstr "Falls aktiviert, werden die Tabs der jeweils aktuellen Seite in das Administrationsmenü verschoben. Diese Funktion ist ausschließlich verfügbar in Themes, welche die CSS-Klasse <code>tabs primary</code> und <code>tabs secondary</code> für Tabs verwenden."
+msgstr "Jika dibolehkan, tab-tab pada laman semasa akan dipindahkan kepada menu pentadbiran. Ciri ini hanya terdapat dalam tema-tema yang menggunakan klas CSS <code>tabs primary</code> dan <code>tabs secondary</code> untuk tab-tabnya."
 
 #: admin_menu.inc:378
 msgid "If the administration menu displays duplicate menu items, you may need to rebuild your menu items using the <em>Wipe and rebuild</em> button."
-msgstr "Falls das Administrationsmenü doppelte Einträge anzeigt, muss es möglicherweise über den <em>Löschen und neu aufbauen</em>-Button neu aufgebaut werden."
+msgstr "Jika menu pentadbiran mempamerkan butiran menu berganda, anda mungkin perlu membina semula butiran menu anda menggunakan butang <em>Basmi dan bina semula</em>."
 
 #: admin_menu.inc:382
 msgid "Wipe and rebuild"
-msgstr "Löschen und neu aufbauen"
+msgstr "Basmi dan bina semula"
 
 #: admin_menu.inc:410
 msgid "Administration menu settings"
-msgstr "Administrationsmenü-Einstellungen"
+msgstr "Seting menu pentadbiran"
 
 #: admin_menu.inc:415
 msgid "None"
-msgstr "Keine"
+msgstr "Tiada"
 
 #: admin_menu.inc:415
 msgid "Menu link ID"
-msgstr "Menü-Link-ID"
+msgstr "ID pautan menu"
 
 #: admin_menu.inc:415
 msgid "Weight"
-msgstr "Reihenfolge"
+msgstr "Berat"
 
 #: admin_menu.inc:415
 msgid "Parent link ID"
-msgstr "Übergeordnete Link-ID"
+msgstr "ID pautan induk"
 
 #: admin_menu.inc:418
 msgid "Display additional data for each menu item"
-msgstr "Zusätzliche Daten für jeden Menüpunkt anzeigen"
+msgstr "Pamer data tambahan bagi setiap butiran menu"
 
 #: admin_menu.inc:421
 msgid "Display the selected items next to each menu item link."
-msgstr "Die ausgewählte Information zu jedem Menüpunkt anzeigen."
+msgstr "Pamer butiran yang dipilih disebelah setiap pautan butiran menu."
 
 #: admin_menu.inc:425
 msgid "Display all menu items"
-msgstr "Alle Menüpunkte anzeigen"
+msgstr "Pamer semua item menu"
 
 #: admin_menu.inc:427
 msgid "If enabled, all menu items are displayed regardless of your site permissions. <em>Note: Do not enable on a production site.</em>"
-msgstr "Falls aktiviert, werden alle Menüpunkte unabhängig von den Benutzerberechtigungen angezeigt. <em>Hinweis: Nicht auf Produktivseiten aktivieren.</em>"
+msgstr "Jika dibolehkan, kesemua butiran-butiran menu akan dipamerkan dengan tidak mengira keizinan laman anda. <em>Nota: Jangan bolehkan di laman pengeluaran.</em>"
 
 #: admin_menu.inc:444
 msgid "Enabled these modules: !module-list."
-msgstr "Diese Module wurden aktiviert: !module-list."
+msgstr "Modul-modul berikut telah dibolehkan: !module-list."
 
 #: admin_menu.inc:456
 msgid "Disabled these modules: !module-list."
-msgstr "Diese Module wurden deaktiviert: !module-list."
+msgstr "Modul-modul berikut telah dinyahbolehkan: !module-list."
 
 #: admin_menu.inc:460
 msgid "No developer modules are enabled."
-msgstr "Es sind keine Entwicklermodule aktiviert."
+msgstr "Tiada modul pemaju yang dibolehkan."
 
 #: admin_menu.module:16
 msgid "The administration menu module provides a dropdown menu arranged for one- or two-click access to most administrative tasks and other common destinations (to users with the proper permissions). Use the settings below to customize the appearance of the menu."
-msgstr "Das Administrationsmenü bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen). Durch die unten sichtbaren Einstellungen kann die Darstellung des Menüs angepasst werden."
+msgstr "Modul menu pentadbiran menyediakan menu jatuh disusun untuk akses satu atau dwi-klik kepada kebanyakan tugas pentadbiran dan destinasi-destinasi biasa (kepada pengguna dengan kezinan yang sewajarnya). Gunakan seting-seting berikutnya untuk mengubahsuai wajah menu tersebut."
 
 #: admin_menu.module:20
 msgid "The administration menu module provides a dropdown menu arranged for one- or two-click access to most administrative tasks and other common destinations (to users with the proper permissions). Administration menu also displays the number of anonymous and authenticated users, and allows modules to add their own custom menu items. Integration with the menu varies from module to module; the contributed module <a href=\"@drupal\">Devel</a>, for instance, makes strong use of the administration menu module to provide quick access to development tools."
-msgstr "Das Administrationsmenü bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen). Es zeigt außerdem die Anzahl der anonymen und authentifizierten Benutzer an, und erlaubt Modulen, weitere Einträge hinzuzufügen. Die Integration mit dem Menü variiert je nach Modul; das Modul <a href=\"@drupal\">Devel</a> macht beispielsweise starken Gebrauch vom Administationsmenü, um schnellen Zugriff auf Entwicklungswerkzeuge bereitzustellen."
+msgstr "Modul menu pentadbiran menyediakan menu jatuh disusun untuk akses satu atau dwi-klik kepada kebanyakan tugas pentadbiran dan destinasi-destinasi biasa (kepada pengguna dengan kezinan yang sewajarnya). Menu pentadbiran juga mempamerkan bilangan pengguna tanpanama dan sah, dan membenarkan modul-modul untuk memasukkan butiran menunya sendiri. Integrasi dengan menu berubah dari modul ke modul; modul sumbangan <a href=\"@drupal\">Devel</a>, sebagai contoh, menggunakan modul menu pentadbiran untuk menyediakan capaian cepat kepada alatan pembangunan."
 
 #: admin_menu.module:21
 msgid "The administration menu <a href=\"@settings\">settings page</a> allows you to modify some elements of the menu's behavior and appearance. Since the appearance of the menu is dependent on your site theme, substantial customizations require modifications to your site's theme and CSS files. See the advanced module README.txt file for more information on theme and CSS customizations."
-msgstr "Die <a href=\"@settings\">Einstellungsseite</a> des Administrationsmenüs erlaubt die Anpassung des Menüverhaltens und der Darstellung. Da die Darstellung des Menüs abhängig von der Theme ist, erfordern erhebliche Anpassungen davon besondere Änderungen in der Theme und CSS-Dateien. Die README.txt enthält weiterführende Informationen zu Theme- und CSS-Anpassungen."
+msgstr "<a href=\"@settings\">Laman seting</a> menu pentadbiran membenarkan anda mengubah suai sesetengah elemen perwatakan menu dan kemununculannya. Memandangkan kemunculan menunya bergantung kepada tema laman anda. Pelangganan yang banyak memerlukan pengubahsuaian kepada tema dan fail CSS laman anda. Lihat fail README.txt modul 'advanced' untuk maklumat lanjut mengenai pelangganan tema dan CSS."
 
 #: admin_menu.module:22
 msgid "The menu items displayed in the administration menu depend upon the actual permissions of the viewer. First, the administration menu is only displayed to users in roles with the <em>Access administration menu</em> (admin_menu module) permission. Second, a user must be a member of a role with the <em>Access administration pages</em> (system module) permission to view administrative links. And, third, only currently permitted links are displayed; for example, if a user is not a member of a role with the permissions <em>Administer permissions</em> (user module) and <em>Administer users</em> (user module), the <em>User management</em> menu item is not displayed."
-msgstr "Die angezeigten Menüpunkte hängen von den tatsächlichen Berechtigungen des Benutzers ab. Zum einen wird das Administrationsmenü nur Benutzern mit der Berechtigung <em>Zugriff auf das Administrationsmenü</em> (admin_menu module) angezeigt. Zum anderen muss der Benutzer die Berechtigung <em>Zugriff auf den Verwaltungsbereich</em> (system module) besitzen, um die administrativen Links zu sehen. Ferner werden ausschließlich erlaubte Links angezeigt; zum Beispiel, wenn ein Benutzer nicht in einer Rolle mit den Berechtigungen <em>Berechtigungen verwalten</em> (user module) und <em>Benutzer verwalten</em> (user module) ist, dann wird der Menüpunkt <em>Benutzerverwaltung</em> nicht angezeigt."
+msgstr "Butiran menu yang terpamer dalam menu pentadbiran bergantung kepada keizinan sebenar pelawat. Pertama, menu pentadbiran hanya dipamerkan kepada pengguna yang mana peranannya mempunyai keizinan <em>Akses menu pentadbiran</em> (modul admin_menu). Kedua, pengguna haruslah menjadi anggota peranan berkeizinan <em>Akses laman pentadbiran</em> (modul sistem) untuk melihat pautan-pautan pentadbiran. Dan ketiga, hanya pautan yang dibenarkan akan dipamerkan; sebagai contoh, jika seorang pengguna bukan anggota peranan dengan keizinan <em>Mentadbir kebenaran</em> (modul pengguna) dan <em>Mentadbir pengguna</em> (modul pengguna), butiran menu <em>Pengurusan pengguna</em> tidak akan dipamerkan."
 
 #: admin_menu.module:306
 msgid "Current anonymous / authenticated users"
-msgstr "Aktuelle Gäste / authentifizierte Benutzer"
+msgstr "Pengguna tanpanama / yang disahkan"
 
 #: admin_menu.module:308
 msgid "@count-anon / @count-auth !icon"
@@ -144,24 +143,24 @@ msgstr "@count-anon / @count-auth !icon"
 
 #: admin_menu.module:321
 msgid "Home"
-msgstr "Startseite"
+msgstr "Laman depan"
 
 #: admin_menu.module:31
 msgid "access administration menu"
-msgstr "Zugriff auf das Administrationsmenü"
+msgstr "akses menu pentadbiran"
 
 #: admin_menu.module:31
 msgid "display drupal links"
-msgstr "Links zu drupal.org anzeigen"
+msgstr "pamer pautan drupal"
 
 #: admin_menu.module:54
 #: admin_menu.info:0
 msgid "Administration menu"
-msgstr "Administrationsmenü"
+msgstr "Menu pentadbiran"
 
 #: admin_menu.module:55
 msgid "Adjust administration menu settings."
-msgstr "Einstellungen für das Administrationsmenü anpassen."
+msgstr "Laraskan seting menu pentadbiran."
 
 #: admin_menu.module:0
 msgid "admin_menu"
@@ -169,9 +168,9 @@ msgstr "admin_menu"
 
 #: admin_menu.info:0
 msgid "Provides a dropdown menu to most administrative tasks and other common destinations (to users with the proper permissions)."
-msgstr "Bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen)."
+msgstr "Menyediakan menu turun bagi kebanyakan tugas pentadbiran dan destinasi am lain (kepada pengguna dengan keizinan yang sewajarnya)."
 
 #: admin_menu.info:0
 msgid "Administration"
-msgstr "Administration"
+msgstr "Pentadbiran"
 
