--- a/sites/all/modules/contrib/admin_menu/translations/zh-hans.po
+++ b/sites/all/modules/contrib/admin_menu/translations/zh-hans.po
@@ -1,142 +1,147 @@
+# $Id: zh-hans.po,v 1.1.4.2 2010/02/20 00:41:10 sun Exp $
+#
+# LANGUAGE translation of Drupal (general)
+# Copyright YEAR NAME <EMAIL@ADDRESS>
+# Generated from files:
+#  admin_menu.inc,v 1.11.2.20 2008/12/28 15:23:07 sun
+#  admin_menu.module,v 1.43.2.16 2008/12/28 15:23:07 sun
+#  admin_menu.info,v 1.5.2.1 2008/11/30 12:50:36 sun
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: admin_menu v1.x\n"
-"POT-Creation-Date: 2009-01-21 22:26+0100\n"
-"PO-Revision-Date: 2009-06-06 19:27+0100\n"
-"Last-Translator: Alexander Haß\n"
-"Language-Team: unleashed mind <dev@unleashedmind.com>\n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: 2009-01-21 22:28+0100\n"
+"PO-Revision-Date: 2009-12-06 12:28+0800\n"
+"Last-Translator: home2u <waixxx@gmail.com>\n"
+"Language-Team: home2u <waixxx@gmail.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Poedit-Language: German\n"
-"X-Poedit-Country: GERMANY\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Chinese\n"
 
 #: admin_menu.inc:261
 msgid "Enable developer modules"
-msgstr "Entwicklermodule aktivieren"
+msgstr "启用开发人员模块"
 
 #: admin_menu.inc:261
 msgid "Disable developer modules"
-msgstr "Entwicklermodule deaktivieren"
+msgstr "禁用开发人员模块"
 
 #: admin_menu.inc:346
 msgid "Adjust top margin"
-msgstr "Oberen Seitenrand anpassen"
+msgstr "调整顶部边距"
 
 #: admin_menu.inc:348
 msgid "If enabled, the site output is shifted down approximately 20 pixels from the top of the viewport to display the administration menu. If disabled, some absolute- or fixed-positioned page elements may be covered by the administration menu."
-msgstr "Falls aktiviert, wird die Seitenausgabe um etwa 20 Pixel nach unten verschoben, um das Administrationsmenü anzuzeigen. Falls deaktiviert, können einige absolut oder fix positionierte Seitenelemente vom Administrationsmenü überdeckt werden."
+msgstr "若选中，网站输出内容将从管理菜单显示区域顶部向下20px左右；若不选，管理菜单可能会遮盖一些绝对定位和固定定位的元素。"
 
-# sun: Original ist falsch.
 #: admin_menu.inc:352
 msgid "Keep menu at top of page"
-msgstr "Menü am Seitenanfang halten"
+msgstr "菜单置于页面顶部"
 
 #: admin_menu.inc:354
 msgid "If enabled, the administration menu is always displayed at the top of the browser viewport (even after the page is scrolled). <strong>Note: In some browsers, this setting results in a malformed page, an invisible cursor, non-selectable elements in forms, or other issues. Disable this option if these issues occur.</strong>"
-msgstr "Falls aktiviert, wird das Administrationsmenü immer am oberen Rand des Browserfensters angezeigt (auch nach dem Betätigen des Bildlaufs). <strong>Hinweis: In manchen Browsern resultiert diese Option in einer falsch angezeigten Seite, einem unsichtbaren Cursor, nicht selektierbare Elemente in Formularen oder anderen Problemen. Die Option sollte deaktiviert werden, falls diese Probleme auftreten.</strong>"
+msgstr "若选中，管理菜单将始终显示在浏览器的可见区域，甚至是网页被滚动，<strong>注意：某些浏览器下，该设置可能导致网页错位、光标消失、表单内容无法选择等问题，出现这些情况请取消选中该项。</strong>"
 
 #: admin_menu.inc:358
 msgid "Advanced settings"
-msgstr "Erweiterte Einstellungen"
+msgstr "高级设置"
 
 #: admin_menu.inc:362
 msgid "Collapse fieldsets on modules page"
-msgstr "Feldgruppen auf der Modul-Seite zuklappen"
+msgstr "折叠模块页的fieldsets "
 
 #: admin_menu.inc:364
 msgid "If enabled, fieldsets on the <a href=\"!modules-url\">modules</a> page are automatically collapsed when loading the page."
-msgstr "Falls aktiviert, werden Feldgruppen auf der <a href=\"!modules-url\">Modul</a>-Seite beim Laden automatisch zugeklappt."
+msgstr "若选中，加载<a href=\"!modules-url\">模块</a>页面时 fieldsets 将自动折叠。"
 
 #: admin_menu.inc:367
 msgid "If the Utility module was installed for this purpose, it can be safely disabled and uninstalled."
-msgstr "Sollte das „Utility“-Modul für diesen Zweck installiert worden sein, kann dieses deaktiviert und deinstalliert werden."
+msgstr "如果为此安装了 Utility 模块，可以安全地禁用或卸载。"
 
 #: admin_menu.inc:371
 msgid "Move local tasks into menu"
-msgstr "Tabs in das Menü verschieben"
+msgstr "将本地任务移至菜单"
 
 #: admin_menu.inc:373
 msgid "If enabled, the tabs on the current page are moved into the administration menu. This feature is only available in themes that use the CSS classes <code>tabs primary</code> and <code>tabs secondary</code> for tabs."
-msgstr "Falls aktiviert, werden die Tabs der jeweils aktuellen Seite in das Administrationsmenü verschoben. Diese Funktion ist ausschließlich verfügbar in Themes, welche die CSS-Klasse <code>tabs primary</code> und <code>tabs secondary</code> für Tabs verwenden."
+msgstr "若选中，当前页面的选项卡将移动到管理菜单，该功能仅在使用了选项卡的 <code>tabs primary</code>和<code>tabs secondary</code> CSS类的主题中可用。"
 
 #: admin_menu.inc:378
 msgid "If the administration menu displays duplicate menu items, you may need to rebuild your menu items using the <em>Wipe and rebuild</em> button."
-msgstr "Falls das Administrationsmenü doppelte Einträge anzeigt, muss es möglicherweise über den <em>Löschen und neu aufbauen</em>-Button neu aufgebaut werden."
+msgstr "如果管理菜单显示重复项，可能需要使用<em>清理并重建菜单</em>按钮重建菜单项。"
 
 #: admin_menu.inc:382
 msgid "Wipe and rebuild"
-msgstr "Löschen und neu aufbauen"
+msgstr "清理并重建菜单"
 
 #: admin_menu.inc:410
 msgid "Administration menu settings"
-msgstr "Administrationsmenü-Einstellungen"
+msgstr "管理菜单设置"
 
 #: admin_menu.inc:415
 msgid "None"
-msgstr "Keine"
+msgstr "无"
 
 #: admin_menu.inc:415
 msgid "Menu link ID"
-msgstr "Menü-Link-ID"
+msgstr "菜单ID"
 
 #: admin_menu.inc:415
 msgid "Weight"
-msgstr "Reihenfolge"
+msgstr "权重"
 
 #: admin_menu.inc:415
 msgid "Parent link ID"
-msgstr "Übergeordnete Link-ID"
+msgstr "上级菜单ID"
 
 #: admin_menu.inc:418
 msgid "Display additional data for each menu item"
-msgstr "Zusätzliche Daten für jeden Menüpunkt anzeigen"
+msgstr "显示各菜单项的附加数据"
 
 #: admin_menu.inc:421
 msgid "Display the selected items next to each menu item link."
-msgstr "Die ausgewählte Information zu jedem Menüpunkt anzeigen."
+msgstr "选中项显示在各菜单项后。"
 
 #: admin_menu.inc:425
 msgid "Display all menu items"
-msgstr "Alle Menüpunkte anzeigen"
+msgstr "显示所有菜单项"
 
 #: admin_menu.inc:427
 msgid "If enabled, all menu items are displayed regardless of your site permissions. <em>Note: Do not enable on a production site.</em>"
-msgstr "Falls aktiviert, werden alle Menüpunkte unabhängig von den Benutzerberechtigungen angezeigt. <em>Hinweis: Nicht auf Produktivseiten aktivieren.</em>"
+msgstr "若选中，所有菜单将忽略权限并全部显示。<em>注意：请勿在生产环境下的站点启用。</em>"
 
 #: admin_menu.inc:444
 msgid "Enabled these modules: !module-list."
-msgstr "Diese Module wurden aktiviert: !module-list."
+msgstr "已启用以下模块： !module-list."
 
 #: admin_menu.inc:456
 msgid "Disabled these modules: !module-list."
-msgstr "Diese Module wurden deaktiviert: !module-list."
+msgstr "已禁用以下模块： !module-list."
 
 #: admin_menu.inc:460
 msgid "No developer modules are enabled."
-msgstr "Es sind keine Entwicklermodule aktiviert."
+msgstr "没有启用的开发人员模块。"
 
 #: admin_menu.module:16
 msgid "The administration menu module provides a dropdown menu arranged for one- or two-click access to most administrative tasks and other common destinations (to users with the proper permissions). Use the settings below to customize the appearance of the menu."
-msgstr "Das Administrationsmenü bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen). Durch die unten sichtbaren Einstellungen kann die Darstellung des Menüs angepasst werden."
+msgstr "下拉式管理菜单为大部分管理任务和(有相应权限的用户的)常用位置提供了一两次点击就能进入页面的菜单，使用以下设置来自定义菜单的外观。"
 
 #: admin_menu.module:20
 msgid "The administration menu module provides a dropdown menu arranged for one- or two-click access to most administrative tasks and other common destinations (to users with the proper permissions). Administration menu also displays the number of anonymous and authenticated users, and allows modules to add their own custom menu items. Integration with the menu varies from module to module; the contributed module <a href=\"@drupal\">Devel</a>, for instance, makes strong use of the administration menu module to provide quick access to development tools."
-msgstr "Das Administrationsmenü bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen). Es zeigt außerdem die Anzahl der anonymen und authentifizierten Benutzer an, und erlaubt Modulen, weitere Einträge hinzuzufügen. Die Integration mit dem Menü variiert je nach Modul; das Modul <a href=\"@drupal\">Devel</a> macht beispielsweise starken Gebrauch vom Administationsmenü, um schnellen Zugriff auf Entwicklungswerkzeuge bereitzustellen."
+msgstr "下拉式管理菜单为大部分管理任务和(有相应权限的用户的)常用位置提供了一两次点击就能进入页面的菜单，可以显示在线会员数和游客数，还可以用模块添加各自的自定义菜单项。集成的菜单因模块而异，例如：<a href=\"@drupal\">Devel</a>模块有效利用了该模块实现了开发工具的快速访问。"
 
 #: admin_menu.module:21
 msgid "The administration menu <a href=\"@settings\">settings page</a> allows you to modify some elements of the menu's behavior and appearance. Since the appearance of the menu is dependent on your site theme, substantial customizations require modifications to your site's theme and CSS files. See the advanced module README.txt file for more information on theme and CSS customizations."
-msgstr "Die <a href=\"@settings\">Einstellungsseite</a> des Administrationsmenüs erlaubt die Anpassung des Menüverhaltens und der Darstellung. Da die Darstellung des Menüs abhängig von der Theme ist, erfordern erhebliche Anpassungen davon besondere Änderungen in der Theme und CSS-Dateien. Die README.txt enthält weiterführende Informationen zu Theme- und CSS-Anpassungen."
+msgstr "下拉式管理菜单的 <a href=\"@settings\">设置</a> 可以修改一些菜单的行为和外观,由于菜单的外观取决于站点的主题，实质性的自定义要求主题修改CSS文件，更多关于主题和自定义CSS的高级内容请参考README.txt文件。"
 
 #: admin_menu.module:22
 msgid "The menu items displayed in the administration menu depend upon the actual permissions of the viewer. First, the administration menu is only displayed to users in roles with the <em>Access administration menu</em> (admin_menu module) permission. Second, a user must be a member of a role with the <em>Access administration pages</em> (system module) permission to view administrative links. And, third, only currently permitted links are displayed; for example, if a user is not a member of a role with the permissions <em>Administer permissions</em> (user module) and <em>Administer users</em> (user module), the <em>User management</em> menu item is not displayed."
-msgstr "Die angezeigten Menüpunkte hängen von den tatsächlichen Berechtigungen des Benutzers ab. Zum einen wird das Administrationsmenü nur Benutzern mit der Berechtigung <em>Zugriff auf das Administrationsmenü</em> (admin_menu module) angezeigt. Zum anderen muss der Benutzer die Berechtigung <em>Zugriff auf den Verwaltungsbereich</em> (system module) besitzen, um die administrativen Links zu sehen. Ferner werden ausschließlich erlaubte Links angezeigt; zum Beispiel, wenn ein Benutzer nicht in einer Rolle mit den Berechtigungen <em>Berechtigungen verwalten</em> (user module) und <em>Benutzer verwalten</em> (user module) ist, dann wird der Menüpunkt <em>Benutzerverwaltung</em> nicht angezeigt."
+msgstr "下拉是管理菜单显示的菜单项取决于浏览者的实际权限。首先，管理菜单仅对有权<em>访问管理菜单(下拉)</em>的角色的用户可见；其次，有权<em>访问(系统模块的)管理菜单</em>的角色的用户才有权访问管理链接，第三，当前有权限访问的链接才会被显示。例如：一个用户的角色没有(用户模块的)<em>管理权限</em>和(用户模块的)<em>管理用户</em>的权限，<em>用户管理</em>这项是不显示的。"
 
 #: admin_menu.module:306
 msgid "Current anonymous / authenticated users"
-msgstr "Aktuelle Gäste / authentifizierte Benutzer"
+msgstr "匿名用户/登录会员"
 
 #: admin_menu.module:308
 msgid "@count-anon / @count-auth !icon"
@@ -144,34 +149,34 @@ msgstr "@count-anon / @count-auth !icon"
 
 #: admin_menu.module:321
 msgid "Home"
-msgstr "Startseite"
+msgstr "主页"
 
 #: admin_menu.module:31
 msgid "access administration menu"
-msgstr "Zugriff auf das Administrationsmenü"
+msgstr "使用管理菜单(下拉)"
 
 #: admin_menu.module:31
 msgid "display drupal links"
-msgstr "Links zu drupal.org anzeigen"
+msgstr "显示drupal链接"
 
 #: admin_menu.module:54
 #: admin_menu.info:0
 msgid "Administration menu"
-msgstr "Administrationsmenü"
+msgstr "管理菜单(下拉)"
 
 #: admin_menu.module:55
 msgid "Adjust administration menu settings."
-msgstr "Einstellungen für das Administrationsmenü anpassen."
+msgstr "调整下拉管理菜单的设置"
 
 #: admin_menu.module:0
 msgid "admin_menu"
-msgstr "admin_menu"
+msgstr "管理菜单(下拉)"
 
 #: admin_menu.info:0
 msgid "Provides a dropdown menu to most administrative tasks and other common destinations (to users with the proper permissions)."
-msgstr "Bietet ein ausklappbares Menü, welches Zugriff auf die meisten administrativen Aufgaben und andere, allgemeine Seiten mit ein oder zwei Klicks erlaubt (für Benutzer mit den entsprechenden Berechtigungen)."
+msgstr "为大部分管理任务和(有相应权限的用户的)常用位置提供下拉菜单"
 
 #: admin_menu.info:0
 msgid "Administration"
-msgstr "Administration"
+msgstr "管理"
 
